--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -11,12 +11,31 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9">
-            <div class="row text-center">
-                <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/images.jpeg}"/>
-            </div>
+            
             <h3 align="center"></h3>
-            <div>
                 <form class="form-horizontal">
+                    
+                    <div class="row">
+                        <div class="col-md-12">
+                             <a sec:authorize="hasRole('ROLE_OPERATIVO')" th:href="${'../edit/' + empleado.codigoempleado}" class="btn btn-primary" style="float: right;">Editar datos generales</a>
+               
+                        </div>
+                    </div>
+                     <div class="row">
+
+                         <div class="col-md-12 text-center" th:if="${avatar.length()  > 0}">
+                            <img  class="img-thumbnail img-avatar" th:src="@{'data:image/png;base64,'+${avatar}}" />
+                             <hr />
+                        </div>
+                         
+                         
+                          <div class="col-md-12 text-center" th:if="${avatar.length()  == 0}">
+                            <img  class="img-thumbnail img-avatar" th:src="@{/image/blank-profile.png}" />
+                             <hr />
+                        </div>
+                    </div>
+
+                   
                     <div class="col-md-6">
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Código:</label>
@@ -669,7 +688,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+           
             <div class="col-md-12">
                 <div class="row" align="center">
                      <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
