--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <body>
+        
+        
+        <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+        
+        
+        <script type="text/javascript" th:src="@{/js/jquery-ui.js}"></script>
+        <script type="text/javascript" th:src="@{/js/SweetAlert.min.js}"></script>
+        
+        <script type="text/javascript" th:src="@{/js/jquery.dataTables.min.js}"></script>
+        
+        <script type="text/javascript" th:src="@{/js/dataTables.bootstrap4.min.js}"></script>
+        
+        <script type="text/javascript" th:src="@{/js/jquery.mask.min.js}"></script>
+        
+        <script type="text/javascript" th:src="@{/js/validacion_controladores.js}"></script>
+        <script type="text/javascript" th:src="@{/js/validacion_controladores2.js}"></script>
+        
+        
+        <script type="text/javascript" th:src="@{/js/script.js}"></script>
+        <script type="text/javascript" th:src="@{/js/validacion_todores3.js}"></script>
+        <script type="text/javascript" th:src="@{/js/helpJs.js}"></script>
+        
         <div th:fragment="footer">
             <footer class="footer">
                 <div class="container" align="center">
@@ -8,11 +31,13 @@
                 </div>
             </footer>
         </div>
+        
+        
+        
+        
     </body>
     <script>
         edit_fecha_format();
-    </script>
-    <script>
         pdffile_event();
         required_field_select();
     </script>
