cosas de arturo de contratos

--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -45,6 +45,9 @@
     </div>
 </div>
     </div>
+     </div>
+    </body>
+
     <script th:inline="javascript">
          Textheader('pnt_geus',document.title);
       $(document).ready(function () {
@@ -120,6 +123,5 @@
                 });
         }
     </script>
-</body>
 
 </html>
