arreglando navegacion de menu jodido

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h3 class="modal-title" id="exampleModalLongTitle">Contratos por vencer! BY Chalo</h3>
+                            <h3 class="modal-title" id="exampleModalLongTitle">Contratos por vencer!</h3>
                               
                         </div>
                         <div class="modal-body">
