--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -6,13 +6,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" media="screen"/>
         <link href="../static/css/Style1.css" th:href="@{/css/Style1.css}" rel="stylesheet" media="screen"/>
-<!--        <script type="text/javascript" th:src="@{/js/jquery.mask.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/jquery.mask.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/validacion_controladores.js}"></script>
         <script type="text/javascript" th:src="@{/js/validacion_controladores2.js}"></script>
         <script type="text/javascript"  th:src="@{/js/script.js}"></script>
         <script type="text/javascript" th:src="@{/js/validacion_todores3.js}"></script>
-        <script type="text/javascript" th:src="@{/js/helpJs.js}"></script>-->
-        <link rel="shortcut icon" type="../../static/image/favicon.png"   th:href="@{/image/favicon.png}"/>
+        <script type="text/javascript" th:src="@{/js/helpJs.js}"></script>
+        <link rel="shortcut icon" type="../../static/image/favicon.png"   th:href="@{/image/favicon.png}"//>
     </head>
     <body>
         <div class="row">
